<?xml version="1.0"?>
<package format="2">
  <name>oru_ipw_controller</name>
  <version>0.0.1</version>
  <description>Handles controlling the state and safety of the robot</description>

  <maintainer email="VorpalBlade@users.noreply.github.com">Arvid Norlander</maintainer>
  <author email="VorpalBlade@users.noreply.github.com">Arvid Norlander</author>
  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/oru_ipw_controller</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>am_driver</build_depend>
  <build_depend>am_driver_safe</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <depend>geometry_msgs</depend>
  <depend>oru_ipw_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>am_driver</exec_depend>
  <exec_depend>am_driver_safe</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
